--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/symant233/mofuServer.git"
+    "url": "git+https://github.com/symant233/mofu-server.git"
   },
   "keywords": [
     "nodejs",
@@ -14,9 +14,9 @@
   "author": "symant233",
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/symant233/mofuServer/issues"
+    "url": "https://github.com/symant233/mofu-server/issues"
   },
-  "homepage": "https://github.com/symant233/mofuServer",
+  "homepage": "https://github.com/symant233/mofu-server",
   "scripts": {
     "start": "cross-env NODE_ENV=production nodemon -r esm server/",
     "serv": "cross-env NODE_ENV=development nodemon -r esm server/",
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "esm": "^3.2.25",
+    "jsonfile": "^6.0.1",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.11.0",
     "koa-body": "^4.1.1",
@@ -31,7 +32,8 @@
     "koa-jwt": "^3.6.0",
     "koa-logger": "^3.2.1",
     "koa-multer": "^1.0.2",
-    "koa-router": "^8.0.8"
+    "koa-router": "^8.0.8",
+    "mongodb": "^3.5.5"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
