--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "test": "cross-env NODE_ENV=development node -r esm others/test.js"
   },
   "dependencies": {
+    "camelcase-keys": "^6.2.2",
     "esm": "^3.2.25",
     "jsonfile": "^6.0.1",
     "jsonwebtoken": "^8.5.1",
@@ -33,7 +34,8 @@
     "koa-logger": "^3.2.1",
     "koa-multer": "^1.0.2",
     "koa-router": "^8.0.8",
-    "mongodb": "^3.5.5"
+    "mongodb": "^3.5.5",
+    "snakecase-keys": "^3.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
