rest api docs, Fix login error... - remove banner - throw 403 on api root - move test folder - add readme - api documents (RESTful) - fix login error - fix me middleware - fix UserStore.veriftPasswd - add more TODOs

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "scripts": {
     "prod": "cross-env NODE_ENV=production nodemon -r esm server/",
     "dev": "cross-env NODE_ENV=development nodemon -r esm server/",
-    "test": "cross-env NODE_ENV=development node -r esm others/test.js"
+    "test": "cross-env NODE_ENV=development node -r esm tests/"
   },
   "dependencies": {
     "camelcase-keys": "^6.2.2",
