GroupStore.listMyGroups - add REST Client settings - add MessageType & RelationType - GroupStore.listMyGroups - update mongo utils

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "editor.tabSize": 2,
     "[javascript]": {
         "editor.formatOnSave": true
-    }
+    },
+    "rest-client.enableCustomVariableReferencesCodeLens": false
 }
