--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "camelcase-keys": "^6.2.2",
+    "cross-env": "^7.0.2",
     "esm": "^3.2.25",
     "jsonfile": "^6.0.1",
     "jsonwebtoken": "^8.5.1",
@@ -35,6 +36,7 @@
     "koa-multer": "^1.0.2",
     "koa-router": "^8.0.8",
     "mongodb": "^3.5.5",
+    "nodemon": "^2.0.3",
     "snakecase-keys": "^3.2.0"
   },
   "devDependencies": {
