--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "scripts": {
     "prod": "cross-env NODE_ENV=production nodemon -r esm server/",
     "dev": "cross-env NODE_ENV=development nodemon -r esm server/",
+    "gate": "cross-env NODE_ENV=development nodemon -r esm gateway/",
     "test": "cross-env NODE_ENV=development node -r esm tests/"
   },
   "dependencies": {
@@ -37,7 +38,9 @@
     "koa-router": "^8.0.8",
     "mongodb": "^3.5.5",
     "nodemon": "^2.0.3",
-    "snakecase-keys": "^3.2.0"
+    "snakecase-keys": "^3.2.0",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
