--- a/package.json
+++ b/package.json
@@ -39,14 +39,17 @@
     "mongodb": "^3.5.5",
     "nodemon": "^2.0.3",
     "snakecase-keys": "^3.2.0",
-    "socket.io": "^2.3.0",
-    "socket.io-client": "^2.3.0"
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "babel-eslint": "^10.1.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.2",
-    "prettier": "^2.0.4"
+    "prettier": "^2.0.4",
+    "socket.io-client": "^2.3.0"
+  },
+  "nodemonConfig": {
+    "ignore": ["tests/*"]
   }
 }
