--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
   "scripts": {
     "prod": "cross-env NODE_ENV=production nodemon -r esm server/",
     "dev": "cross-env NODE_ENV=development nodemon -r esm server/",
-    "gate": "cross-env NODE_ENV=development nodemon -r esm gateway/",
     "test": "cross-env NODE_ENV=development node -r esm tests/"
   },
   "dependencies": {
+    "@koa/cors": "^3.0.0",
     "camelcase-keys": "^6.2.2",
     "cross-env": "^7.0.2",
     "esm": "^3.2.25",
@@ -50,6 +50,8 @@
     "socket.io-client": "^2.3.0"
   },
   "nodemonConfig": {
-    "ignore": ["tests/*"]
+    "ignore": [
+      "tests/*"
+    ]
   }
 }
