--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "koa-router": "^8.0.8",
     "mongodb": "^3.5.5",
     "nodemon": "^2.0.3",
-    "snakecase-keys": "^3.2.0"
+    "snakecase-keys": "^3.2.0",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.10.2",
