--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "koa-router": "^8.0.8",
     "mongodb": "^3.5.5",
     "nodemon": "^2.0.3",
+    "saslprep": "^1.0.3",
     "snakecase-keys": "^3.2.0",
     "socket.io": "^2.3.0"
   },
